--- a/public/styles.css
+++ b/public/styles.css
@@ -78,3 +78,99 @@ img.hover-image {
   display: flex;
   flex-wrap: wrap;
 }
+
+
+
+
+
+/* ***************************************************************************************
+Styles for ML
+***************************************************************************************** */
+
+.mlhome{
+  width: 100%;
+  text-align: center;
+}
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
+  max-width: 80%;
+  padding: 20 px;
+  margin: 100px auto;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  width: 250px;
+  height: 300px;
+  background-color: white;
+}
+.card h2{
+  background-color: #f5ba13;
+  border-radius: 5px;
+  border: 2px solid #ccc;
+  padding: 5px;
+  width: 100%;
+  height: 30%;
+  margin-bottom: 5px;
+  color: white;
+}
+.card p{
+  height : 70%;
+  border-radius: 5px;
+  border: 2px solid #ccc;
+  padding: 5px;
+  width: 100%;
+  margin-top: 5px;
+  color: maroon;
+  background-color: white;
+}
+
+.card:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 250px;
+  height: 300px;
+  border: 2px solid #ccc;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  background-color: #0069d9;
+}
